hphp/hack/test/decl/classes.php.typecheck.exp
File "classes.php", line 9, characters 19-29:
Class `MyClass` has properties that cannot be null and aren't always set in `__construct`. (NastCheck[3015])
File "classes.php", line 5, characters 17-33:
`$this->instanceProperty` is not initialized.
File "classes.php", line 6, characters 17-34:
`$this->protectedProperty` is not initialized.
File "classes.php", line 4, characters 25-39:
Please assign a value (Typing[4055])
File "classes.php", line 41, characters 31-37:
Reactive functions can only call other reactive functions. (Typing[4200])
File "classes.php", line 9, characters 19-29:
This function is normal.
